# Olist-AI-E-Commerce-Assistance

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
agents/: analytics_agent.py  orchestrator.py  rag_agent.py  recommendation_agent.py  sql_agent.py
database/: olist.db  sql_store.py  vector_store.py
scripts/: ingest_vectors.py  prepare_data.py
streamlit/: app.py  image_example  requirements.txt
utils/: image_search.py  observability.py  sentiment.py
